...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="FOP-iF-Rph">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="29"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <segments>
                                    <segment title="Debts"/>
                                    <segment title="Statistics"/>
                                    <segment title="Debtors"/>
                                </segments>
                                <color key="tintColor" red="0.89019607840000003" green="0.42352941179999998" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                <connections>
                                    <action selector="segmentDidChange:" destination="hXu-ao-VMJ" eventType="valueChanged" id="Xct-yJ-doq"/>
                                </connections>
                            </segmentedControl>
...
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pRQ-u5-ulb">
                                    <rect key="frame" x="463.5" y="81" width="73" height="30"/>
                                    <state key="normal" title="Remind All">
                                        <color key="titleColor" red="0.89019607840000003" green="0.42352941179999998" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                                    </state>
                                    <connections>
                                        <action selector="allButtonPressed:" destination="EFC-WZ-FWY" eventType="touchUpInside" id="jvx-fL-NOb"/>
                                    </connections>
                                </button>
...
