...
                            <constraint firstItem="wFq-FO-4o3" firstAttribute="top" secondItem="3nW-vl-95J" secondAttribute="bottom" id="IYc-ch-Ios"/>
                            <constraint firstAttribute="trailing" secondItem="3nW-vl-95J" secondAttribute="trailing" id="PFO-rm-Gfe"/>
                            <constraint firstItem="3nW-vl-95J" firstAttribute="leading" secondItem="sl4-37-PAH" secondAttribute="leading" id="mJx-Yh-omy"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Bulletin Board" id="9dx-fl-1KV">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="3l3-aH-CtM">
                            <connections>
                                <action selector="createNewBulletinBoardObject:" destination="b4h-PZ-Uq1" id="Two-t7-vbF"/>
                                <segue destination="wn8-Bb-TTw" kind="show" id="SLg-mB-dwE"/>
                            </connections>
                        </barButtonItem>
...
            </objects>
            <point key="canvasLocation" x="1924" y="2419.3403298350827"/>
        </scene>
        <!--New Bulletin Post-->
        <scene sceneID="Ouu-5E-mPe">
            <objects>
                <viewController title="New Bulletin Post" id="wn8-Bb-TTw" customClass="createBBPostVC" customModule="roomate" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="rEx-Ge-TTo"/>
                        <viewControllerLayoutGuide type="bottom" id="POz-31-h9v"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ygd-8m-nkc">
                        <rect key="frame" x="0.0" y="64" width="375" height="603"/>
...
