//
//  LoginStringConst.swift
//  roomate
//
//  Created by Ritvik Upadhyaya on 26/10/16.
//  Copyright © 2016 RooMate. All rights reserved.
//

import Foundation

public struct LoginStringConst {
    static let joinHouseholdAlertTitle = "Where do you live?"
    static let joinHouseholdAlertMessage = "Please contact the creator of the household for the household ID"
    static let joinHouseholdAlertPlaceholder = "ABC-PQR-XYZ"
    static let loginSuccessSegue = "loginSuccessSegue"
    static let detailBBPostSegue = "detailBBPostSegue"
}
